# router

./: .dockerignore  .env.example  .gitignore  .yamllint.yml  Cargo.toml  Dockerfile  config.dev.yaml  configuration.schema.json  fly.toml  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: deploy.yml  lint.yml
src/: hive.rs  http.rs  main.rs  responses.rs
src/http/: resolver.rs
src/plugins/: authentication.rs  context.rs  current_user.rs  error.rs  events.rs  identity.rs  mod.rs  proxy.rs
xtask/: Cargo.toml
