# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "router"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "xtask",
]

[[bin]]
name = "router"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
apollo-router = { git = "ssh://git@github.com/TheHackerApp/apollo-router.git", branch = "main" }
async-trait = "0.1"
context = { version = "0.4", features = ["headers"], registry = "wafflehacks" }
http = "0.2"
schemars = "0.8"
serde = "1"
tower = { version = "0.4", default-features = false }
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros"] }

[workspace.dependencies]
anyhow = "1"
